--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                         aria-haspopup="true" aria-expanded="false">
                     </span>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="./team22.html">Team 2021-2022</a>
                         <a class="dropdown-item" href="./team21.html">Team 2020-2021</a>
                         <a class="dropdown-item" href="./team20.html">Team 2019-2020</a>
                         <a class="dropdown-item" href="./team19.html">Team 2018-2019</a>
