team 22 completed, insta handle links changed

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link " id="link-1a" href="./team21.html">Our Team</a>
+                    <a class="nav-link " id="link-1a" href="./team22.html">Our Team</a>
 
                     <span class="nav-link dropdown-toggle" href="#" id="link-1b" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
@@ -735,7 +735,7 @@
                                     <!--<li><a class="icoQuora" href="" title="Quora"><i class="fa fa-quora"></i></a></li>-->
                                     <li><a class="icoFacebook" href="https://www.facebook.com/pisbcredenz/"
                                             title="Facebook" target="blank"><i class="fab fa-facebook"></i></a></li>
-                                    <li><a class="icoInstagram" href="https://www.instagram.com/pisbcredenz/"
+                                    <li><a class="icoInstagram" href="https://www.instagram.com/pictieee/"
                                             title="Instagram" target="blank"><i class="fab fa-instagram"></i></a></li>
                                 </ul>
                             </div>
