--- a/ping/ping.html
+++ b/ping/ping.html
@@ -486,7 +486,7 @@
                                   <!--<li><a class="icoQuora" href="" title="Quora"><i class="fa fa-quora"></i></a></li>-->
                                   <li><a class="icoFacebook" href="https://www.facebook.com/pisbcredenz/"
                                       title="Facebook" target="blank"><i class="fab fa-facebook"></i></a></li>
-                                  <li><a class="icoInstagram" href="https://www.instagram.com/pisbcredenz/"
+                                  <li><a class="icoInstagram" href="https://www.instagram.com/pictieee/"
                                       title="Instagram" target="blank"><i class="fab fa-instagram"></i></a></li>
                                 </ul>
                               </div>
