--- a/question.html
+++ b/question.html
@@ -110,12 +110,13 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link " id="link-1a" href="./team21.html">Our Team</a>
+                    <a class="nav-link " id="link-1a" href="./team22.html">Our Team</a>
 
                     <span class="nav-link dropdown-toggle" href="#" id="link-1b" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
                     </span>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="./team22.html">Team 2021-2022</a>
                         <a class="dropdown-item" href="./team21.html">Team 2020-2021</a>
                         <a class="dropdown-item" href="./team20.html">Team 2019-2020</a>
                         <a class="dropdown-item" href="./team19.html">Team 2018-2019</a>
@@ -509,7 +510,7 @@
                                     <!--<li><a class="icoQuora" href="" title="Quora"><i class="fa fa-quora"></i></a></li>-->
                                     <li><a class="icoFacebook" href="https://www.facebook.com/pisbcredenz/"
                                             title="Facebook" target="blank"><i class="fab fa-facebook"></i></a></li>
-                                    <li><a class="icoInstagram" href="https://www.instagram.com/pisbcredenz/"
+                                    <li><a class="icoInstagram" href="https://www.instagram.com/pictieee/"
                                             title="Instagram" target="blank"><i class="fab fa-instagram"></i></a></li>
                                 </ul>
                             </div>
