--- a/team23.html
+++ b/team23.html
@@ -170,31 +170,11 @@
 	
 	<div class="container-fluid">
 		<div class="row d-flex " id="2020">
-			<!-- Content -->
 			<div class="col-12 col-md-12">
 				<div class="container-fluid">
 
-					<div class="row d-flex ">
+					<!-- <div class="row d-flex ">
 						<div class="col-12">
-							<!--div class="tab row">
-								<button class="tablinks  col- col-md  " autofocus
-									onclick="openTab(event, 'ExeTeam')">Executive Team <span class="line-1"></span>
-									<span class="line-2"></span> <span class="line-3"></span> <span
-										class="line-4"></span> </button>
-								<button class="tablinks col- col-md" onclick="openTab(event, 'MaFi')">Marketing
-									Team <span class="line-1"></span> <span class="line-2"></span> <span
-										class="line-3"></span> <span class="line-4"></span> </button>
-								<button class="tablinks col- col-md " onclick="openTab(event, 'Des')">Design Team <span
-										class="line-1"></span> <span class="line-2"></span> <span class="line-3"></span>
-									<span class="line-4"></span> </button>
-								<button class="tablinks col- col-md " onclick="openTab(event, 'Tech')">Technical Team
-									<span class="line-1"></span> <span class="line-2"></span> <span
-										class="line-3"></span> <span class="line-4"></span> </button>
-								<button class="tablinks col- col-md " onclick="openTab(event, 'Ping')">P.I.N.G. team
-									<span class="line-1"></span> <span class="line-2"></span> <span
-										class="line-3"></span> <span class="line-4"></span> </button>
-							</div-->
-
 							<div class="row">
 								<div class="col-12 d-flex  justify-content-center">
 									<div class="teamTitle">
@@ -203,7 +183,6 @@
 								</div>
 							</div>
 
-							<!--  -->
 							<div class="row">
 								<div class="col-md-6 col-sm-12">
 									<div class="card-wrapper">
@@ -229,7 +208,6 @@
 											</div>
 										</div>
 									</div>
-									<!-- end box wrapper -->
 									<h2 class="pos">Chair,<br> IEEE Computer Society
 										Chapter,<br> Pune Section</h2>
 								</div>
@@ -256,10 +234,9 @@
 											</div>
 										</div>
 									</div>
-									<!-- end box wrapper -->
 									<h2 class="pos">Branch <br> Counsellor</h2>
 								</div>
-							</div>
+							</div> -->
 
 							<!-- vice chairperson and join secretory 1 -->
 							<div class="row">
