fix: updated about-us page

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -170,7 +170,7 @@
       </div>
       <section id="aboutus">
 
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-sm-12">
             <h2 class="text-center msg">Message From Branch Mentor </h2>
           </div>
@@ -182,7 +182,6 @@
           </div>
           <div class="col-sm-12 cont para">
             <p>Dear all,<br>
-              <!-- data-aos="zoom-in" data-aos-duration="1500" -->
               It gives me immense pleasure to write this message for the new website of PICT IEEE Student Branch (PISB).
               It is a great contribution by PICT IEEE Student Branch, which provides an opportunity for all, including
               student members, to showcase their talent, views and further strengthen IEEE activities. PISB has always
@@ -221,9 +220,9 @@
               Dean and Professor, PICT
             </p>
           </div>
-        </div>
+        </div> -->
 
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-sm-12">
             <h2 class="text-center msg">Message From Branch Counsellor </h2>
           </div>
@@ -235,7 +234,6 @@
           </div>
           <div class="col-sm-12 cont para">
             <p>Dear all,<br>
-              <!-- data-aos="zoom-in" data-aos-duration="1500" -->
               It gives me immense pleasure to serve PICT IEEE Student Branch (STB18461) as a Branch Counsellor. As a
               member of IEEE Pune Section, I got a chance to contribute towards PISB activities since 2006. I am
               thankful to all the fellow members of PISB for their active support and their commendable efforts.
@@ -263,8 +261,7 @@
               Professor, PICT<br>
             </p>
           </div>
-        </div>
-        <!-- <hr> -->
+        </div> -->
       </section>
       <section>
 
