--- a/achievements.html
+++ b/achievements.html
@@ -112,13 +112,14 @@
 					</div>
 				</li>
 				<li class="nav-item dropdown">
-					<a class="nav-link " id="link-1a" href="./team23.html">Our Team</a>
+					<a class="nav-link " id="link-1a" href="./team24.html">Our Team</a>
 
 					<span class="nav-link dropdown-toggle" href="#" id="link-1b" data-toggle="dropdown"
 						aria-haspopup="true" aria-expanded="false">
 					</span>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-						<a class="dropdown-item" href="./team23.html">Team 2022-2023</a>
+						<a class="dropdown-item" href="./team24.html">Team 2023-2024</a>
+            <a class="dropdown-item" href="./team23.html">Team 2022-2023</a>
 						<a class="dropdown-item" href="./team22.html">Team 2021-2022</a>
 						<a class="dropdown-item" href="./team21.html">Team 2020-2021</a>
 						<a class="dropdown-item" href="./team20.html">Team 2019-2020</a>
@@ -184,8 +185,56 @@
 			<br>
 		</div>
 	</section>
+	<section class="award"></section>
+		<div class="container1">	
+			<ul class="tiles">
+				<li class="tile">
+					<div class="feature-icon">
+						<i class="fas fa-trophy" aria-hidden="true"></i>
+					</div>
+					<p class="title">Best Student Branch<br>Award</p>
+					<p class="amount">IEEE India Council 2024</p>
+				</li>
+				<li class="tile">
+					<div class="feature-icon">
+						<i class="fas fa-trophy" aria-hidden="true"></i>
+					</div>
+					<p class="title">Best Chairperson Award-<br> Nidhi Yadav</p>
+					<p class="amount">IEEE India Council 2024</p>
+				</li>
+				<!-- <li class="tile">
+					<div class="feature-icon">
+						<i class="fas fa-trophy" aria-hidden="true"></i>
+					</div>
+					<p class="title">Darrel Chong Student<br>Award </p>
+					<p class="amount">Silver Level 2016</p>
+				</li> -->
+				<!-- <li class="tile">
+					<div class="feature-icon">
+						<i class="fas fa-trophy" aria-hidden="true"></i>
+					</div>
+					<p class="title">Region 10 Exemplary Student Branch Award</p>
+					<p class="amount">2016-17</p>
+				</li>
+				<li class="tile">
+					<div class="feature-icon">
+						<i class="fas fa-trophy" aria-hidden="true"></i>
+					</div>
+					<p class="title">Best IEEE Student Branch Pune Section</p>
+					<p class="amount">2019</p>
+				</li>
+				<li class="tile">
+					<div class="feature-icon">
+						<i class="fas fa-trophy" aria-hidden="true"></i>
+					</div>
+					<p class="title">Microsoft Student Ambassador</p>
+					<p class="amount">Harshad Manglani</p>
+				</li> -->
+			</ul>
+		</div>
+	</section>
 	<section class="award">
-		<div class="container1">
+		<div class="container1">	
 			<ul class="tiles">
 				<li class="tile">
 					<div class="feature-icon">
