--- a/index.html
+++ b/index.html
@@ -125,13 +125,14 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link " id="link-1a" href="./team23.html">Our Team</a>
+                    <a class="nav-link " id="link-1a" href="./team24.html">Our Team</a>
 
                     <span class="nav-link dropdown-toggle" href="#" id="link-1b" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
                     </span>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="./team23.html">Team 2022-2023</a>
+                        <a class="dropdown-item" href="./team24.html">Team 2023-2024</a>
+            <a class="dropdown-item" href="./team23.html">Team 2022-2023</a>
                         <a class="dropdown-item" href="./team22.html">Team 2021-2022</a>
                         <a class="dropdown-item" href="./team21.html">Team 2020-2021</a>
                         <a class="dropdown-item" href="./team20.html">Team 2019-2020</a>
@@ -168,7 +169,7 @@
     <a id="button1"></a>
 
     <!-- Wallstreet modal -->
-    <div class="modal   fade" id="wallstreet-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    <!-- <div class="modal   fade" id="wallstreet-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
@@ -177,9 +178,6 @@
                     class="modal-header d-flex justify-content-center text-align-center p-0">
                     <h1 id="coming">Coming Soon...
                     </h1>
-                    <!--     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button> -->
                     <img style="width: 70%;" src="./Home/img/modal1.gif">
                 </div>
                 <div class="modal-body">
@@ -195,7 +193,7 @@
 
             </div>
         </div>
-    </div>
+    </div> -->
 
 
     <div class="my-content">
