fix: updated position names

--- a/team24.html
+++ b/team24.html
@@ -252,13 +252,13 @@
 										</div>
 									</div>
 									<!-- end box wrapper -->
-									<h2 class="pos">Vice<br> Chairperson</h2>
+									<h2 class="pos">Chairperson</h2>
 								</div>
 							</div>
 
 							<!--join secretory -->
 							<div class="row">
-								<!-- Joint secretary 1 -->
+								<!-- Secretary 1 -->
 								<div class="col-lg-4 col-sm-12">
 									<div class="card-wrapper">
 										<div class="card">
@@ -284,10 +284,10 @@
 										</div>
 									</div>
 									<!-- end box wrapper -->
-									<h2 class="pos">Joint Secretary</h2>
+									<h2 class="pos">Secretary</h2>
 								</div>
 
-								<!-- Joint secretary 2 -->
+								<!-- Secretary 2 -->
 								<div class="col-lg-4 col-sm-12">
 									<div class="card-wrapper">
 										<div class="card">
@@ -314,10 +314,10 @@
 										</div>
 									</div>
 									<!-- end box wrapper -->
-									<h2 class="pos">Joint Secretary</h2>
+									<h2 class="pos">Secretary</h2>
 								</div>
 
-								<!-- Joint secretary 3 -->
+								<!-- Secretary 3 -->
 								<div class="col-lg-4 col-sm-12">
 									<div class="card-wrapper">
 										<div class="card">
@@ -344,7 +344,7 @@
 										</div>
 									</div>
 									<!-- end box wrapper -->
-									<h2 class="pos">Joint Secretary</h2>
+									<h2 class="pos">Secretary</h2>
 								</div>
 							</div>
 
