feat: Added PING 19.1

--- a/ping.html
+++ b/ping.html
@@ -250,6 +250,34 @@
     <h2 class="head">NEW RELEASE</h2>
     <div class="container-fluid" style="margin-top: 5vh;">
       <div class="row mt-5 d-flex justify-content-center align-items-center">
+        <div class="col-md-4">
+          <div style="text-align: center;"><img class="team-photo"
+              src="./ping/img/ping19.1.jpg"></div>
+          <div class="bttn-cont mt-4">
+            <a id="techbutt" class="bttn" href="ping191.html" target="_blank">
+              <b>Open Magazine</b>
+              <span class="line-1"></span>
+              <span class="line-2"></span>
+              <span class="line-3"></span>
+              <span class="line-4"></span>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-7 p-2 mr-6 grid" data-aos="zoom-in"
+          data-aos-duration="1000">
+          <p id="right">
+            P.I.N.G. 19.1, released alongside Credenz’24, offers a compelling selection of articles covering the latest breakthroughs in technology. This edition brings together insights from industry leaders and aspiring innovators, highlighting the transformative impact of Artificial Intelligence, Quantum Computing, and Cybersecurity. Featured articles such as "AI in Creative Fields," "Quantum Supremacy," and "The Future of Cyber Threats" provide a deep dive into these rapidly evolving domains.  
+
+            An exclusive interview with Dr. Ramesh Narayan, a leading researcher in AI ethics, sheds light on the moral implications of autonomous systems. Additionally, discussions with Mr. Arvind Mehta, a cloud computing expert, and Ms. Priya Sinha, a biotech entrepreneur, explore the convergence of technology and human advancement.  
+
+            Beyond AI, the magazine delves into topics like Biotechnology, Sustainable Tech, and Space Exploration, offering readers a broad perspective on the future. P.I.N.G. 19.1 is an essential read for tech enthusiasts and professionals eager to stay ahead in the digital revolution, embracing innovation and limitless possibilities.
+          </p>
+        </div>
+      </div>
+
+
+      <h2 class="head">PREVIOUS MAGAZINES</h2>
+      <div class="row mt-5 d-flex justify-content-center align-items-center">
         <div class="col-md-7 p-2 mr-6 grid mt-4" data-aos="zoom-in"
           data-aos-duration="1000">
           <p id="left">
@@ -295,8 +323,6 @@
         </div>
       </div>
 
-
-      <h2 class="head">PREVIOUS MAGAZINES</h2>
       <div class="row mt-5 d-flex justify-content-center align-items-center">
         <div class="col-md-4">
           <div style="text-align: center;"><img class="team-photo"
