fix: Upated PING 19.1 description

--- a/ping.html
+++ b/ping.html
@@ -253,7 +253,7 @@
         <div class="col-md-4">
           <div style="text-align: center;"><img class="team-photo"
               src="./ping/img/ping19.1.jpg"></div>
-          <div class="bttn-cont mt-4">
+          <div class="bttn-cont mt-4 mb-4">
             <a id="techbutt" class="bttn" href="ping191.html" target="_blank">
               <b>Open Magazine</b>
               <span class="line-1"></span>
@@ -263,14 +263,13 @@
             </a>
           </div>
         </div>
-        <div class="col-md-7 p-2 mr-6 grid" data-aos="zoom-in"
+        <div class="col-md-7 p-2 mr-6 grid mt-4" data-aos="zoom-in"
           data-aos-duration="1000">
-          <p id="right">
-            P.I.N.G. 19.1, released alongside Credenz’24, offers a compelling selection of articles covering the latest breakthroughs in technology. This edition brings together insights from industry leaders and aspiring innovators, highlighting the transformative impact of Artificial Intelligence, Quantum Computing, and Cybersecurity. Featured articles such as "AI in Creative Fields," "Quantum Supremacy," and "The Future of Cyber Threats" provide a deep dive into these rapidly evolving domains.  
+          <p id="right mt-5">
+            P.I.N.G. proudly presents issue 19.1, released alongside Credenz’24. This edition is committed to enlightening and empowering tech students, enthusiasts and emerging professionals with invaluable and exclusive knowledge about the dynamic tech landscape and strategies to excel within it. It brings together insights from industry leaders and aspiring innovators, highlighting the transformative impact of breakthroughs in Artificial Intelligence, Quantum Computing, and Modern PCB Design through its featured articles. 
+            We are thrilled to present an exclusive interview with our distinguished alumnus, Mr. Kamal Ved, CPO at Fetch.ai, renowned for his extensive experience in product management and technology across tech giants like Amazon and Bosch, as well as his entrepreneurial ventures in startup initiatives. We also had the privilege of engaging with Mr. Abizer Lokhandwala, Senior Software Engineer at Meta, and Mr. Rigved Kulkarni, a former AI and Automation Engineer at Lucid Motors. We invite readers from diverse colleges and professional institutions worldwide to explore the latest innovations and industry insights showcased in this edition of P.I.N.G.
 
-            An exclusive interview with Dr. Ramesh Narayan, a leading researcher in AI ethics, sheds light on the moral implications of autonomous systems. Additionally, discussions with Mr. Arvind Mehta, a cloud computing expert, and Ms. Priya Sinha, a biotech entrepreneur, explore the convergence of technology and human advancement.  
 
-            Beyond AI, the magazine delves into topics like Biotechnology, Sustainable Tech, and Space Exploration, offering readers a broad perspective on the future. P.I.N.G. 19.1 is an essential read for tech enthusiasts and professionals eager to stay ahead in the digital revolution, embracing innovation and limitless possibilities.
           </p>
         </div>
       </div>
